[gd_scene load_steps=6 format=3 uid="uid://dc64nxdsphsap"]

[ext_resource type="Script" path="res://scripts/Zombies/ZombieController.gd" id="1_fhxu0"]
[ext_resource type="Texture2D" uid="uid://bhmnm4qniwkk8" path="res://sprites/CharacterSprites/Jon Baby Zombie Sprite.png" id="2_iap57"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xyn48"]
size = Vector2(13, 13)

[sub_resource type="CircleShape2D" id="CircleShape2D_o7745"]
radius = 11.0

[sub_resource type="CircleShape2D" id="CircleShape2D_k387p"]
radius = 400.0

[node name="Zombie" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 152
motion_mode = 1
script = ExtResource("1_fhxu0")
type = 2
roamingSpeedRange = Vector2(60, 80)
chasingSpeedRange = Vector2(130, 160)
acceleration = 9
broadcastRange = 150
health = 70
coinWorth = 5

[node name="BulletCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xyn48")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 3.0
path_metadata_flags = 0

[node name="RayCastToPlayer" type="RayCast2D" parent="."]

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 144

[node name="DamageShape" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource("CircleShape2D_o7745")

[node name="SpriteDirection" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="SpriteDirection"]
position = Vector2(0, -4)
scale = Vector2(1.1, 1.1)
texture = ExtResource("2_iap57")

[node name="TargetSenseArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetSenseArea"]
shape = SubResource("CircleShape2D_k387p")

[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
